# taurivim

./: .gitignore  Cargo.toml  README.md  package.json  rollup.config.js
public/: index.html
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
